# application-product-scheduled-process

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: com.agmri.product-normalizer.plist  setup.py
sql/: 001_create_schema.sql  002_create_tables.sql  003_create_sequences.sql  004_seed_data.sql
src/product_normalizer/: __init__.py  cli.py  config.py  db.py  extract.py  matchers.py  notify.py  pipeline.py  review_ui.py  writer.py
tests/: conftest.py  test_config.py  test_extract.py  test_matchers.py  test_writer.py
